# DeskPal

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
.github/workflows/: release.yml
.hermes/plans/: 2025-06-01_181500-terminal-tool.md  2025-06-01_201500-grid-custom-layout.md  2025-06-01_213000-tree-category-layout.md  2026-05-29_clipboard-fill-unified.md  2026-05-29_window-position-fix.md  2026-06-01_182500-dblclick-threshold-config.md  2026-06-01_dormant-icons.md  2026-06-01_four-tools-port.md  2026-06-01_text-tool-port-v2.md  2026-06-01_text-tool-port.md  auto-hide.md  config-system.md  settings-rework.md
docs/ai-rules/: 01-config-system.md  02-architecture.md  03-git.md  04-tools-development.md  README.md
plugins/helloworld/: index.js  manifest.json  style.css
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: loader.rs  mod.rs  schema.rs  types.rs
src-tauri/src/detect/: engine.rs  types.rs
src-tauri/src/flink/: api.rs
src-tauri/src/hotkey/: mod.rs  registry.rs
src-tauri/src/plugins/: mod.rs  scanner.rs  types.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: manager.rs  mod.rs  trigger.rs
src/components/: ErrorBoundary.tsx  PluginManager.tsx  SettingsPanel.tsx  StatusBar.tsx  TitleBar.tsx  Toast.tsx  ToolGrid.tsx  ToolPanel.tsx
src/lib/: categories.ts  events.ts  ipc.ts  pluginLoader.ts  registry.ts
src/store/: index.ts  toastStore.ts
(+41 files in other folders)
