[package]
name = "deskpal"
version = "1.1.0"
description = "A desktop efficiency toolbox that lives at your screen edge"
authors = ["DeskPal"]
edition = "2021"

[lib]
name = "deskpal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
opener = "0.7"
